--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "fsm-as-promised": "^0.13.0",
-    "visibilityjs": "^1.2.3",
-    "webrtc-adapter": "^1.4.0"
+    "visibilityjs": "^1.2.3"
   }
 }
